--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "TaskmgrDb": "mongodb+srv://Haixiao:123321@cluster0-eiagv.mongodb.net/test?retryWrites=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
